adding fonts and fixing code

--- a/WordPress-Essentials/html.html
+++ b/WordPress-Essentials/html.html
@@ -43,9 +43,9 @@
 
 
             <ul>
-                <li><i class="far fa-play-circle">13 август 2019</i></li>
+                <li><i class="far fa-play-circle"></i>13  август 2019</li>
                 <li><i class="far fa-file-alt"></i>29 септември 2019</li>
-                <li><i class="far fa-clock">4 седмици</i></li>
+                <li><i class="far fa-clock"></i>4 седмици</li>
                 <li><i class="fas fa-hat-wizard"></i>3 кредита</li>
             </ul>
 
@@ -59,13 +59,13 @@
                 <h3>ЗА КУРСА</h3>
             </div>
             <div class="about-course-content">
-                <p>Курсът WordPress Essentials изгражда базови технически умения по разработка на уеб сайтове с
-                    WordPress: настройка на хостинг и домейн, инсталиране и конфигуриране на WordPress (WP), инсталиране
-                    и конфигуриране на теми (themes) и добавки (plugins), създаване и редактиране на уеб съдържание
+                <p>Курсът <span>WordPress Essentials</span> изгражда базови технически умения по разработка на уеб сайтове с
+                    <span>WordPress:</span>настройка на хостинг и домейн, инсталиране и конфигуриране на <span>WordPress (WP)</span>, инсталиране
+                    и конфигуриране на теми <span>(themes) </span>и добавки <span>(plugins)</span>, създаване и редактиране на уеб съдържание
                     (ръчно и с визуални уеб редактори), създаване на страници, публикации, снимки и мултимедия. Изучават
                     се популярни WP теми и добавки (плъгини) и техните възможности за създаване на формуляри (forms),
                     контакти, фото-галерии, форуми, електронни магазини и други. Въвеждат се базови познания по
-                    изграждане на собствена WP тема с HTML, CSS и PHP WP.</p>
+                    изграждане на собствена WP тема с <span>HTML, CSS и PHP WP.</span></p>
             </div>
             <div><button class="about-course-button">ЗАЯВИ УЧАСТИЕ</button></div>
         </section>
@@ -76,16 +76,16 @@
             <div class="skills-section-wrapper">
                 <div class="skills-section-uls">
                     <ul>
-                        <li><i class="fas fa-hat-wizard"></i>Инсталация и настройка на WordPress</li>
-                        <li><i class="fas fa-hat-wizard"></i>Създаване на цялостни WordPress сайтове</li>
-                        <li><i class="fas fa-hat-wizard"></i>Работа с уеб хостинг, домейни и cPanel</li>
+                        <li><i class="fas fa-graduation-cap"></i></i>Инсталация и настройка на WordPress</li>
+                        <li><i class="fas fa-graduation-cap"></i></i>Създаване на цялостни WordPress сайтове</li>
+                        <li><i class="fas fa-graduation-cap"></i></i>Работа с уеб хостинг, домейни и cPanel</li>
                     </ul>
                 </div>
                 <div class="skills-section-uls">
                     <ul>
-                        <li><i class="fas fa-hat-wizard"></i>Инсталация и настройка на теми и добавки</li>
-                        <li><i class="fas fa-hat-wizard"></i>Създаване и промяна на собствени WP теми</li>
-                        <li><i class="fas fa-hat-wizard"></i>Работа по практически проект изграден с WordPress</li>
+                        <li><i class="fas fa-graduation-cap"></i></i>Инсталация и настройка на теми и добавки</li>
+                        <li><i class="fas fa-graduation-cap"></i></i>Създаване и промяна на собствени WP теми</li>
+                        <li><i class="fas fa-graduation-cap"></i></i>Работа по практически проект изграден с WordPress</li>
                     </ul>
                 </div>
             </div>
