--- a/WordPress-Essentials/html.html
+++ b/WordPress-Essentials/html.html
@@ -33,9 +33,6 @@
                 <p class="second-p">Отворени курсове и модули </p>
             </div>
         </section>
-        <section>
-
-        </section>
         <section class="main-wrapper">
 
 
@@ -43,7 +40,7 @@
 
 
             <ul>
-                <li><i class="far fa-play-circle"></i>13  август 2019</li>
+                <li><i class="far fa-play-circle"></i>13 август 2019</li>
                 <li><i class="far fa-file-alt"></i>29 септември 2019</li>
                 <li><i class="far fa-clock"></i>4 седмици</li>
                 <li><i class="fas fa-hat-wizard"></i>3 кредита</li>
@@ -51,21 +48,25 @@
 
             <button class="main-wrapper-btn">ЗАЯВИ УЧАСТИЕ</button>
         </section>
-        <div class="wordpress-logo">
+        <section class="wordpress-logo">
             <img src="wordpress.png" alt="something went wrong">
-        </div>
+        </section>
         <section class="about-course-section">
             <div class="about-course-h3">
                 <h3>ЗА КУРСА</h3>
             </div>
             <div class="about-course-content">
-                <p>Курсът <span>WordPress Essentials</span> изгражда базови технически умения по разработка на уеб сайтове с
-                    <span>WordPress:</span>настройка на хостинг и домейн, инсталиране и конфигуриране на <span>WordPress (WP)</span>, инсталиране
-                    и конфигуриране на теми <span>(themes) </span>и добавки <span>(plugins)</span>, създаване и редактиране на уеб съдържание
+                <p>Курсът <span>WordPress Essentials</span> изгражда базови технически умения по разработка на уеб
+                    сайтове с
+                    <span>WordPress:</span>настройка на хостинг и домейн, инсталиране и конфигуриране на <span>WordPress
+                        (WP)</span>, инсталиране
+                    и конфигуриране на теми <span>(themes) </span>и добавки <span>(plugins)</span>, създаване и
+                    редактиране на уеб съдържание
                     (ръчно и с визуални уеб редактори), създаване на страници, публикации, снимки и мултимедия. Изучават
                     се популярни WP теми и добавки (плъгини) и техните възможности за създаване на формуляри (forms),
                     контакти, фото-галерии, форуми, електронни магазини и други. Въвеждат се базови познания по
-                    изграждане на собствена WP тема с <span>HTML, CSS и PHP WP.</span></p>
+                    изграждане на собствена WP тема с <span>HTML, CSS и PHP WP.</span>
+                </p>
             </div>
             <div><button class="about-course-button">ЗАЯВИ УЧАСТИЕ</button></div>
         </section>
@@ -85,7 +86,8 @@
                     <ul>
                         <li><i class="fas fa-graduation-cap"></i></i>Инсталация и настройка на теми и добавки</li>
                         <li><i class="fas fa-graduation-cap"></i></i>Създаване и промяна на собствени WP теми</li>
-                        <li><i class="fas fa-graduation-cap"></i></i>Работа по практически проект изграден с WordPress</li>
+                        <li><i class="fas fa-graduation-cap"></i></i>Работа по практически проект изграден с WordPress
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -97,7 +99,7 @@
             </div>
             <div class="topic-section-uls">
                 <div>
-                    <ul class="topic-section-uls-space ko">
+                    <ul class="topic-section-uls-space both-sides">
                         <li><span class="span-color">1</span>RESOURCES</li>
                         <li><span class="span-color">2</span> COURSE INTRODUCTION</li>
                         <li><span class="span-color">3</span> INTRODUCTION TO WORDPRESS</li>
@@ -107,7 +109,7 @@
                         <li><span class="span-color">7</span> USING WORDPRESS PLUGINS</li>
                     </ul>
                 </div>
-                <div class="topic-section-uls-color ko">
+                <div class="topic-section-uls-color both-sides">
                     <ul>
                         <li><span class="span-color">8</span> EXERCISE: USING WORDPRESS PLUGINS</li>
                         <li><span class="span-color">9</span> WORKSHOP: A REAL LIFE EXAMPLE</li>
@@ -121,8 +123,8 @@
             </div>
         </section>
         <section class="course-info-section">
+            <h3 class="course-info-h3">ЗА КОГО Е ПОДХОДЯЩ КУРСЪТ?</h3>
             <div class="course-info-h3-border">
-                <h3 class="course-info-h3">ЗА КОГО Е ПОДХОДЯЩ КУРСА</h3>
             </div>
             <div class="course-info-section-p">
                 <p>Курсът е подходящ както за начинаещи, така и за хора, с опит в програмирането, които искат да научат
@@ -134,26 +136,30 @@
         <section class="more-info-section">
             <div>
                 <p class="bold-p">ДОКОГА МОГА ДА СЕ ЗАПИША И КОГА СТАРТИРА КУРСЪТ?</p>
-                <p>Записването за курса е отворено до 11 август. Обучението стартира на 13 август 2019 г. и завършва с
-                    защита на проект на 29 септември и 2 октомври 2019г. (може да изберете удобната дата за вас).</p>
+                <p>Записването за курса е отворено до <span>11 август.</span> Обучението стартира на <span>13 август
+                        2019 г</span>. и завършва с
+                    защита на проект на <span>29 септември и 2 октомври 2019г. (може да изберете удобната дата за
+                        вас).</span></p>
             </div>
-            <div>
+            <div class="info-section-p">
                 <p class="bold-p">КАК МОГА ДА СЕ ЗАПИША?</p>
-                <p>За да се запишете за курса, кликнете ТУК или на оранжевия бутон "ЗАЯВЕТЕ УЧАСТИЕ" и следвайте
+                <p>За да се <span>запишете за курса</span>, кликнете <span
+                        style="color:#337AB7;font-weight:bold;cursor:pointer;">ТУК</span> или на оранжевия бутон
+                    <span>"ЗАЯВЕТЕ УЧАСТИЕ"</span> и следвайте
                     стъпките. След като заплатите за курса, вие ще бъдете записани в него.</p>
             </div>
-            <section class="for-positioning">
-                <article class="first-article-content">
-                    <p>Присъствено</p>
-                    <ul>
-                        <li>Присъствие на всички учебни занятия</li>
-                        <li>Достъп до ресурси и видеа от учебните занятия</li>
-                        <li>Достъп до виртуална класна стая и обучение в реално време</li>
-                        <li>Явяване на изпит и издаване на сертификат</li>
-                        <li>Явяване на изпит и издаване на сертификат</li>
-                    </ul>
+            <section class="more-info-for-course">
+                <article class="first-part">
+                        <p>Присъствено</p>
+                        <ul>
+                            <li>Присъствие на всички учебни занятия</li>
+                            <li>Достъп до ресурси и видеа от учебните занятия</li>
+                            <li>Достъп до виртуална класна стая и обучение в реално време</li>
+                            <li>Явяване на изпит и издаване на сертификат</li>
+                            <li>Контакт с лектор или асистент</li>
+                        </ul>
                 </article>
-                <article class="second-article-content">
+                <article class="second-part">
                     <p>Онлайн</p>
                     <ul>
                         <li>Достъп до ресурси и видеа от учебните занятия</li>
