fixing code ,adding new futures

--- a/WordPress-Essentials/html.html
+++ b/WordPress-Essentials/html.html
@@ -40,10 +40,10 @@
 
 
             <ul>
-                <li><i class="far fa-play-circle"></i>13 август 2019</li>
+                <li><i class="fas fa-play-circle"></i>13 август 2019</li>
                 <li><i class="far fa-file-alt"></i>29 септември 2019</li>
                 <li><i class="far fa-clock"></i>4 седмици</li>
-                <li><i class="fas fa-hat-wizard"></i>3 кредита</li>
+                <li><i class="fas fa-graduation-cap"></i>3 кредита</li>
             </ul>
 
             <button class="main-wrapper-btn">ЗАЯВИ УЧАСТИЕ</button>
