fixing code, adding new features

--- a/WordPress-Essentials/html.html
+++ b/WordPress-Essentials/html.html
@@ -146,18 +146,19 @@
                 <p>За да се <span>запишете за курса</span>, кликнете <span
                         style="color:#337AB7;font-weight:bold;cursor:pointer;">ТУК</span> или на оранжевия бутон
                     <span>"ЗАЯВЕТЕ УЧАСТИЕ"</span> и следвайте
-                    стъпките. След като заплатите за курса, вие ще бъдете записани в него.</p>
+                    стъпките. След като заплатите за курса, вие ще бъдете записани в него.
+                </p>
             </div>
             <section class="more-info-for-course">
                 <article class="first-part">
-                        <p>Присъствено</p>
-                        <ul>
-                            <li>Присъствие на всички учебни занятия</li>
-                            <li>Достъп до ресурси и видеа от учебните занятия</li>
-                            <li>Достъп до виртуална класна стая и обучение в реално време</li>
-                            <li>Явяване на изпит и издаване на сертификат</li>
-                            <li>Контакт с лектор или асистент</li>
-                        </ul>
+                    <p>Присъствено</p>
+                    <ul>
+                        <li>Присъствие на всички учебни занятия</li>
+                        <li>Достъп до ресурси и видеа от учебните занятия</li>
+                        <li>Достъп до виртуална класна стая и обучение в реално време</li>
+                        <li>Явяване на изпит и издаване на сертификат</li>
+                        <li>Контакт с лектор или асистент</li>
+                    </ul>
                 </article>
                 <article class="second-part">
                     <p>Онлайн</p>
@@ -217,7 +218,7 @@
                 </ul>
                 <div class="copy-right-text">
                     <p> &copy; 2017-2020 - SoftUni Creative.</p>
-                    <p>All Rights Reserved.</p>
+                    <p>All Rights Reserved. </p>
                 </div>
             </article>
         </section>
