--- a/WordPress-Essentials/html.html
+++ b/WordPress-Essentials/html.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <div><img class="logo-img" src="software-university-logo.svg" alt=""><button
+            <div><a href="#"><img class="logo-img" src="software-university-logo.svg" alt=""></a><button
                     class="logo-btn">Кандидатствай</button></div>
 
 
@@ -211,10 +211,10 @@
             </article>
             <article class="icon-items">
                 <ul>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                    <li><i class="fab fa-google-plus-g"></i></li>
-                    <li><i class="fab fa-youtube"></i></li>
-                    <li><i class="fab fa-instagram"></i></li>
+                    <a href="https://www.facebook.com/SoftwareUniversity" target="_blank"><li><i class="fab fa-facebook-f"></i></li></a>
+                    <a href="https://www.google.bg/" target="_blank"><li><i class="fab fa-google-plus-g"></i></li></a>
+                    <a href="https://www.youtube.com/user/softwareuniversity" target="_blank"><li><i class="fab fa-youtube"></i></li></a>
+                    <a href="https://www.instagram.com/" target="_blank"><li><i class="fab fa-instagram"></i></li></a>
                 </ul>
                 <div class="copy-right-text">
                     <p> &copy; 2017-2020 - SoftUni Creative.</p>
