adding responsive design

--- a/WordPress-Essentials/main.html
+++ b/WordPress-Essentials/main.html
@@ -12,7 +12,11 @@
     <header>
         <nav>
             <div><a href="#"><img class="logo-img" src="software-university-logo.svg" alt=""></a><button
-                    class="logo-btn">Кандидатствай</button></div>
+                    class="logo-btn">Кандидатствай</button>
+            </div>
+            <span class="drop-down-menu-button">
+                <i class="fas fa-bars"></i>
+            </span>
             <ul>
                 <li class="li">ЗА НАС</li>
                 <li class="li">ОБУЧЕНИЯ</li>
