adding new responsive features

--- a/WordPress-Essentials/main.html
+++ b/WordPress-Essentials/main.html
@@ -97,8 +97,8 @@
                 <h3 class="topic-h3">ТЕМИ</h3>
             </div>
             <div class="topic-section-uls">
-                <div>
-                    <ul class="topic-section-uls-space both-sides">
+                <div class="topic-section-uls-space both-sides">
+                    <ul>
                         <li><span class="span-color">1</span>RESOURCES</li>
                         <li><span class="span-color">2</span> COURSE INTRODUCTION</li>
                         <li><span class="span-color">3</span> INTRODUCTION TO WORDPRESS</li>
