adding new responsive features

--- a/WordPress-Essentials/main.html
+++ b/WordPress-Essentials/main.html
@@ -15,16 +15,18 @@
             <div><a href="#"><img class="logo-img" src="software-university-logo.svg" alt=""></a><button
                     class="logo-btn">Кандидатствай</button>
             </div>
-            <span class="drop-down-menu-button">
-                <i class="fas fa-bars"></i>
-            </span>
-            <ul>
-                <li class="li">ЗА НАС</li>
-                <li class="li">ОБУЧЕНИЯ</li>
-                <li class="li">КОНТАКТИ</li>
-                <li><i class="fas fa-search"></i></li>
-                <li><button class="enter-btn">Вход</button></li>
-            </ul>
+            <div class="hover-function">
+                <span class="drop-down-menu-button">
+                    <i class="fas fa-bars"></i>
+                </span>
+                <ul>
+                    <li class="li">ЗА НАС</li>
+                    <li class="li">ОБУЧЕНИЯ</li>
+                    <li class="li">КОНТАКТИ</li>
+                    <li><i class="fas fa-search"></i></li>
+                    <li><button class="enter-btn">Вход</button></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
@@ -135,7 +137,7 @@
         <section class="more-info-section">
             <div>
                 <p class="bold-p">ДОКОГА МОГА ДА СЕ ЗАПИША И КОГА СТАРТИРА КУРСЪТ?</p>
-                <p>Записването за курса е отворено до <span>11 август.</span> Обучението стартира на <span>13 август
+                <p class="more-info-section-content">Записването за курса е отворено до <span>11 август.</span> Обучението стартира на <span>13 август
                         2019 г</span>. и завършва с
                     защита на проект на <span>29 септември и 2 октомври 2019г. (може да изберете удобната дата за
                         вас).</span></p>
@@ -149,7 +151,7 @@
                 </p>
             </div>
             <section class="more-info-for-course">
-                <article class="first-part">
+                <article class="more-info-course-first-part">
                     <p>Присъствено</p>
                     <ul>
                         <li>Присъствие на всички учебни занятия</li>
@@ -159,7 +161,7 @@
                         <li>Контакт с лектор или асистент</li>
                     </ul>
                 </article>
-                <article class="second-part">
+                <article class="more-info-course-second-part">
                     <p>Онлайн</p>
                     <ul>
                         <li>Достъп до ресурси и видеа от учебните занятия</li>
