--- a/WordPress-Essentials/main-css.html
+++ b/WordPress-Essentials/main-css.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="main-css.css">
+    <link rel="stylesheet" href="main-media-css.css">
     <title>WordPress-Essentials</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <div><a href="#"><img class="logo-img" src="software-university-logo.svg" alt=""></a><button
+            <div><a href="#"><img class="logo-img" src="images/software-university-logo.svg" alt=""></a><button
                     class="logo-btn">Кандидатствай</button>
             </div>
             <div class="hover-function">
@@ -49,7 +49,7 @@
             <button class="main-wrapper-btn">ЗАЯВИ УЧАСТИЕ</button>
         </section>
         <section class="wordpress-logo">
-            <img src="wordpress.png" alt="something went wrong">
+            <img src="images/wordpress.png" alt="something went wrong">
         </section>
         <section class="about-course-section">
             <div class="about-course-h3">
