adding new features

--- a/WordPress-Essentials/index.html
+++ b/WordPress-Essentials/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main-css.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="styles/main-sass.css">
     <link rel="stylesheet" href="styles/main-sass.scss">
-    <link rel="stylesheet" href="main-media-css.css">
+    <link rel="stylesheet" href="main-media.css">
     <title>WordPress-Essentials</title>
 </head>
 
